@@ -22,7 +22,6 @@ import org.apache.kafka.common.config.SaslConfigs;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -32,8 +31,7 @@ public class PrincipalConnectorClientConfigOverridePolicyTest extends BaseConnec
 
     @Test
     public void testPrincipalOnly() {
-        Map<String, Object> clientConfig = Collections.singletonMap(SaslConfigs.SASL_JAAS_CONFIG, "test");
-        testValidOverride(clientConfig);
+        testValidOverride(Map.of(SaslConfigs.SASL_JAAS_CONFIG, "test"));
     }
 
     @Test
